# ghostimplant

./: .gitignore  CMakeLists.txt  README.md  START_GUIDE.md  SYSTEM_DESIGN.md  build.ps1  build.sh  wrangler.toml
.wrangler/cache/: wrangler-account.json
include/: c2.hpp  config.hpp  evasion.hpp  injection.hpp  keylog.hpp  obfuscate.hpp  persistence.hpp  shell.h  syscalls.hpp  utils.hpp
resources/: ghost.manifest  ghost.rc  launcher.manifest  launcher.rc
server/: c2_cli.py  c2_server.py  requirements.txt
src/: c2.cpp  evasion.cpp  injection.cpp  keylog.cpp  launcher.cpp  main.cpp  persistence.cpp  shell.cpp  syscalls.cpp  utils.cpp
tools/: encrypt_domain.py
worker/: fix.py  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
